--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "url": "https://github.com/stylelint/jest-preset-stylelint.git"
   },
   "files": [
+    "jest-setup.js",
     "jest-preset.json"
   ],
   "dependencies": {
