fix: avoid Jest preset conflicts by not using the Jest preset for this repo

--- a/package.json
+++ b/package.json
@@ -56,7 +56,11 @@
     }
   },
   "jest": {
-    "preset": "./jest-preset.json"
+		"testEnvironment": "node",
+		"testMatch": [
+			"**/?(*.)(spec|test).js"
+		],
+		"verbose": true
   },
   "remarkConfig": {
     "plugins": [
