--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "lint:js": "eslint . --ignore-path .gitignore",
     "lint:md": "remark . --quiet --frail",
     "lint": "npm-run-all --parallel lint:*",
+    "postinstall": "node create-jest-preset.js",
     "pretest": "npm run lint",
     "release": "npmpub",
     "test": "jest",
