fix: add `create-jest-preset.js` to `files` section of `package.json`

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "url": "https://github.com/stylelint/jest-preset-stylelint.git"
   },
   "files": [
+    "create-jest-preset.js",
     "getOsEol.js",
     "jest-setup.js",
     "jest-preset.json"
