--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint": "^4.19.1",
     "eslint-config-stylelint": "^8.1.0",
     "jest": "^22.4.3",
+    "jest-preset-stylelint": ".",
     "npm-run-all": "^4.1.2",
     "npmpub": "^3.1.0",
     "remark-cli": "^5.0.0",
@@ -62,11 +63,7 @@
     }
   },
   "jest": {
-    "testEnvironment": "node",
-    "testMatch": [
-      "**/?(*.)(spec|test).js"
-    ],
-    "verbose": true
+    "preset": "jest-preset-stylelint"
   },
   "remarkConfig": {
     "plugins": [
