fix: don't distribute `jest-preset.json` as it's dynamically generated now

--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
   "files": [
     "create-jest-preset.js",
     "getOsEol.js",
-    "jest-setup.js",
-    "jest-preset.json"
+    "jest-setup.js"
   ],
   "engines": {
     "node": ">=6"
