--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   },
   "peerDependencies": {
     "jest": ">=22",
-    "stylelint": "^9.1.3"
+    "stylelint": "^10.1.0 || ^11.0.0 || ^12.0.0"
   },
   "scripts": {
     "dry-release": "npmpub --dry --verbose",
