--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     "@stylelint/remark-preset": "^1.0.0",
     "eslint": "^6.8.0",
     "eslint-config-stylelint": "^12.0.0",
+    "husky": "^4.2.5",
     "jest": "^25.3.0",
+    "lint-staged": "^10.1.7",
     "np": "^6.2.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.4",
