Allow advanced setup for stylelint core and plugin pack authors (#17)
* Allow advanced setup for stylelint core and plugin pack authors

* Format

* Make proposed changes

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "MIT",
   "author": "stylelint",
   "files": [
-    "getOsEol.js",
+    "getTestRule.js",
     "jest-preset.js",
     "jest-setup.js"
   ],
