--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "eslint": "^6.8.0",
     "eslint-config-stylelint": "^12.0.0",
     "husky": "^4.2.5",
-    "jest": "^25.3.0",
+    "jest": "^26.0.1",
     "lint-staged": "^10.1.7",
     "np": "^6.2.1",
     "npm-run-all": "^4.1.5",
@@ -61,7 +61,7 @@
     "stylelint": "^13.3.2"
   },
   "peerDependencies": {
-    "jest": "^25.3.0",
+    "jest": "^25.3.0 || ^26.0.1",
     "stylelint": "^13.0.0"
   },
   "engines": {
