--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -20,7 +20,7 @@ jobs:
 
     strategy:
       matrix:
-        node: [12]
+        node: [14]
         os: [ubuntu-latest]
 
     steps:
@@ -48,7 +48,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node: [10, 12]
+        node: [12, 14, 16]
 
     steps:
       - uses: actions/checkout@v2
