--- a/package.json
+++ b/package.json
@@ -48,16 +48,16 @@
   },
   "devDependencies": {
     "@stylelint/prettier-config": "^2.0.0",
-    "@stylelint/remark-preset": "^1.0.0",
-    "eslint": "^6.8.0",
-    "eslint-config-stylelint": "^12.0.0",
-    "husky": "^4.2.5",
+    "@stylelint/remark-preset": "^2.0.0",
+    "eslint": "^7.26.0",
+    "eslint-config-stylelint": "^13.1.0",
+    "husky": "^6.0.0",
     "jest": "^26.0.1",
-    "lint-staged": "^10.1.7",
-    "np": "^6.2.1",
+    "lint-staged": "^11.0.0",
+    "np": "^7.5.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.0.4",
-    "remark-cli": "^8.0.0",
+    "prettier": "^2.3.0",
+    "remark-cli": "^9.0.0",
     "stylelint": "^13.3.2"
   },
   "peerDependencies": {
@@ -65,6 +65,6 @@
     "stylelint": "^13.0.0"
   },
   "engines": {
-    "node": ">=10"
+    "node": "^12.20 || >= 14.13"
   }
 }
