Fix peer deps and engine range

--- a/package.json
+++ b/package.json
@@ -61,10 +61,9 @@
     "stylelint": "^13.3.2"
   },
   "peerDependencies": {
-    "jest": "^25.3.0 || ^26.0.1",
-    "stylelint": "^13.0.0"
+    "jest": "^25.3.0 || ^26.0.1"
   },
   "engines": {
-    "node": "^12.20 || >= 14.13"
+    "node": "^12.20.0 || ^14.13.1 || >=16.0.0"
   }
 }
