--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "eslint": "^7.26.0",
     "eslint-config-stylelint": "^13.1.0",
     "husky": "^6.0.0",
-    "jest": "^26.0.1",
+    "jest": "^27.0.1",
     "lint-staged": "^11.0.0",
     "np": "^7.5.0",
     "npm-run-all": "^4.1.5",
@@ -61,7 +61,7 @@
     "stylelint": "^13.3.2"
   },
   "peerDependencies": {
-    "jest": "^25.3.0 || ^26.0.1"
+    "jest": "^25.3.0 || ^26.0.1 || ^27.0.1"
   },
   "engines": {
     "node": "^12.20.0 || ^14.13.1 || >=16.0.0"
