--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jest-preset-stylelint",
   "version": "4.1.1",
-  "description": "Jest preset for stylelint plugins.",
+  "description": "Jest preset for Stylelint plugins.",
   "keywords": [
     "stylelint",
     "jest",
