--- a/package.json
+++ b/package.json
@@ -24,12 +24,8 @@
     "lint:md": "remark . --quiet --frail ",
     "release": "np",
     "test": "jest",
-    "watch": "jest --watch"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
+    "watch": "jest --watch",
+    "prepare": "husky install"
   },
   "lint-staged": {
     "*.js": "eslint --cache --fix",
@@ -39,7 +35,11 @@
   "eslintConfig": {
     "extends": [
       "stylelint"
-    ]
+    ],
+    "globals": {
+      "module": true,
+      "require": true
+    }
   },
   "remarkConfig": {
     "plugins": [
@@ -48,17 +48,17 @@
   },
   "devDependencies": {
     "@stylelint/prettier-config": "^2.0.0",
-    "@stylelint/remark-preset": "^2.0.0",
-    "eslint": "^7.27.0",
-    "eslint-config-stylelint": "^13.1.1",
-    "husky": "^6.0.0",
-    "jest": "^27.0.1",
-    "lint-staged": "^11.0.0",
+    "@stylelint/remark-preset": "^3.0.0",
+    "eslint": "^8.2.0",
+    "eslint-config-stylelint": "^15.0.0",
+    "husky": "^7.0.4",
+    "jest": "^27.3.1",
+    "lint-staged": "^11.2.6",
     "np": "^7.5.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.3.0",
-    "remark-cli": "^9.0.0",
-    "stylelint": "^13.13.1"
+    "prettier": "^2.4.1",
+    "remark-cli": "^10.0.0",
+    "stylelint": "^14.0.1"
   },
   "peerDependencies": {
     "jest": "^25.3.0 || ^26.0.1 || ^27.0.1"
