--- a/package.json
+++ b/package.json
@@ -11,17 +11,21 @@
   "repository": "stylelint/jest-preset-stylelint",
   "license": "MIT",
   "author": "stylelint",
+  "types": "index.d.ts",
   "files": [
+    "basicChecks.js",
     "getTestRule.js",
     "jest-preset.js",
-    "jest-setup.js"
+    "jest-setup.js",
+    "index.d.ts"
   ],
   "scripts": {
     "format": "prettier . --write",
     "lint": "npm-run-all --parallel lint:*",
     "lint:formatting": "prettier . --check",
-    "lint:js": "eslint . ",
-    "lint:md": "remark . --quiet --frail ",
+    "lint:js": "eslint .",
+    "lint:md": "remark . --quiet --frail",
+    "lint:types": "tsc",
     "release": "np",
     "test": "jest",
     "watch": "jest --watch",
@@ -39,7 +43,9 @@
     "globals": {
       "module": true,
       "require": true
-    }
+    },
+    "reportUnusedDisableDirectives": true,
+    "root": true
   },
   "remarkConfig": {
     "plugins": [
@@ -49,6 +55,7 @@
   "devDependencies": {
     "@stylelint/prettier-config": "^2.0.0",
     "@stylelint/remark-preset": "^3.0.0",
+    "@types/jest": "^27.4.0",
     "eslint": "^8.2.0",
     "eslint-config-stylelint": "^15.0.0",
     "husky": "^7.0.4",
@@ -58,7 +65,8 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.4.1",
     "remark-cli": "^10.0.0",
-    "stylelint": "^14.0.1"
+    "stylelint": "^14.0.1",
+    "typescript": "^4.5.5"
   },
   "peerDependencies": {
     "jest": "^25.3.0 || ^26.0.1 || ^27.0.1"
