Fix target branch from `master` to `main` on CI
This change also removes `env.CI: true` because it's set by default.

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -3,14 +3,11 @@ name: CI
 on:
   push:
     branches:
-      - master
+      - main
       - 'dependabot/**'
   pull_request:
     branches:
       - '**'
-
-env:
-  CI: true
 
 jobs:
   lint:
