--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "eslint": "^8.13.0",
     "eslint-config-stylelint": "^15.0.0",
     "husky": "^7.0.4",
-    "jest": "^27.5.1",
+    "jest": "^28.0.2",
     "lint-staged": "^12.3.8",
     "np": "^7.6.1",
     "npm-run-all": "^4.1.5",
@@ -69,7 +69,7 @@
     "typescript": "^4.6.3"
   },
   "peerDependencies": {
-    "jest": "^25.3.0 || ^26.0.1 || ^27.0.1"
+    "jest": "^25.3.0 || ^26.0.1 || ^27.0.1 || ^28.0.2"
   },
   "engines": {
     "node": "^12.20.0 || ^14.13.1 || >=16.0.0"
