--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "eslint": "^8.17.0",
     "eslint-config-stylelint": "^15.1.0",
     "husky": "^8.0.1",
-    "jest": "^28.1.0",
+    "jest": "^29.0.1",
     "lint-staged": "^13.0.0",
     "np": "^7.6.1",
     "npm-run-all": "^4.1.5",
@@ -69,7 +69,7 @@
     "typescript": "^4.7.3"
   },
   "peerDependencies": {
-    "jest": "^25.3.0 || ^26.0.1 || ^27.0.1 || ^28.0.2"
+    "jest": "^25.3.0 || ^26.0.1 || ^27.0.1 || ^28.0.2 || ^29.0.1"
   },
   "engines": {
     "node": "^12.20.0 || ^14.13.1 || >=16.0.0"
