--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "typescript": "^4.7.3"
   },
   "peerDependencies": {
-    "jest": "^25.3.0 || ^26.0.1 || ^27.0.1 || ^28.0.2 || ^29.0.1"
+    "jest": "^29.0.1"
   },
   "engines": {
     "node": "^14.15.0 || >=16.10.0"
