--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lint:md": "remark . --quiet --frail",
     "lint:types": "tsc",
     "release": "np",
+    "pretest": "npm run lint",
     "test": "jest",
     "watch": "jest --watch",
     "prepare": "husky install"
