--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
   "prettier": "@stylelint/prettier-config",
   "eslintConfig": {
     "extends": [
-      "stylelint"
+      "stylelint",
+      "stylelint/jest"
     ],
     "globals": {
       "module": true,
@@ -56,18 +57,19 @@
   "devDependencies": {
     "@stylelint/prettier-config": "^2.0.0",
     "@stylelint/remark-preset": "^4.0.0",
-    "@types/jest": "^29.0.0",
-    "eslint": "^8.23.0",
-    "eslint-config-stylelint": "^15.1.0",
-    "husky": "^8.0.1",
-    "jest": "^29.0.2",
-    "lint-staged": "^13.0.3",
-    "np": "^7.6.2",
+    "@types/jest": "^29.4.0",
+    "eslint": "^8.34.0",
+    "eslint-config-stylelint": "^18.0.0",
+    "eslint-plugin-jest": "^27.2.1",
+    "husky": "^8.0.3",
+    "jest": "^29.4.3",
+    "lint-staged": "^13.1.2",
+    "np": "^7.6.3",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.7.1",
+    "prettier": "^2.8.4",
     "remark-cli": "^11.0.0",
-    "stylelint": "^14.11.0",
-    "typescript": "^4.8.2"
+    "stylelint": "^15.1.0",
+    "typescript": "^4.9.5"
   },
   "peerDependencies": {
     "jest": "^29.0.2"
