Remove dependency on Stylelint's internal module `lib/utils/getOsEol`
This change aims to make changes easier by removing the dependency on an internal module.

Summary:
- Change the `os.EOL` property by the before/all hooks instead of mocking.
- Add a file for `setupFilesAfterEnv`.
- Delay requiring `stylelint` in `getTestRule()`.

See also:
- https://github.com/stylelint/stylelint/blob/0dbed54626e87786c2ef2e4ccd4c27d04c8a6918/lib/utils/getOsEol.js
- https://jestjs.io/docs/configuration/#setupfilesafterenv-array

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "getTestRule.js",
     "jest-preset.js",
     "jest-setup.js",
+    "jest-setup-after-env.js",
     "index.d.ts"
   ],
   "scripts": {
