--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "main": "index.js",
   "types": "index.d.ts",
   "files": [
-    "getTestInvalidRuleConfigs.js",
+    "getTestRuleConfigs.js",
     "getTestRule.js",
     "jest-preset.js",
     "jest-setup.js",
