--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^3.1.0",
     "remark-cli": "^12.0.0",
-    "stylelint": "^16.0.0-3",
+    "stylelint": "^16.0.0",
     "typescript": "^5.3.2"
   },
   "peerDependencies": {
