--- a/package.json
+++ b/package.json
@@ -9,6 +9,16 @@
     "preset"
   ],
   "repository": "stylelint/jest-preset-stylelint",
+  "funding": [
+    {
+      "type": "opencollective",
+      "url": "https://opencollective.com/stylelint"
+    },
+    {
+      "type": "github",
+      "url": "https://github.com/sponsors/stylelint"
+    }
+  ],
   "license": "MIT",
   "author": "stylelint",
   "main": "index.js",
