--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -10,12 +10,12 @@ on:
 
 jobs:
   lint:
-    uses: stylelint/.github/.github/workflows/lint.yml@34f1c0ac91f245ee4ee5ce725bb844328c17ccf5 # 0.3.0
+    uses: stylelint/.github/.github/workflows/call-lint.yml@34f1c0ac91f245ee4ee5ce725bb844328c17ccf5 # 0.3.0
     permissions:
       contents: read
 
   test:
-    uses: stylelint/.github/.github/workflows/test.yml@34f1c0ac91f245ee4ee5ce725bb844328c17ccf5 # 0.3.0
+    uses: stylelint/.github/.github/workflows/call-test.yml@34f1c0ac91f245ee4ee5ce725bb844328c17ccf5 # 0.3.0
     with:
       node-version: '["20", "22", "24"]'
     permissions:
