--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,11 @@
 	"compilerOptions": {
 		"target": "ES2022",
 		"lib": ["ES2022"],
-		"module": "CommonJS",
-		"moduleResolution": "Node",
+		"module": "nodenext",
+		"moduleResolution": "nodenext",
 		"allowJs": true,
 		"checkJs": true,
 		"noEmit": true,
-		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
 		"strict": true,
 		"skipLibCheck": true
