Remove `stylelint` less than `17.0.0` from peer dependencies.

--- a/package.json
+++ b/package.json
@@ -76,7 +76,8 @@
     "typescript": "^5.9.3"
   },
   "peerDependencies": {
-    "jest": "^30.2.0"
+    "jest": "^30.2.0",
+    "stylelint": "^17.0.0"
   },
   "engines": {
     "node": ">=20.19.0"
