--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^3.7.4",
     "remark-cli": "^12.0.1",
-    "stylelint": "github:stylelint/stylelint#v17",
+    "stylelint": "^17.0.0",
     "typescript": "^5.9.3"
   },
   "peerDependencies": {
