--- a/package.json
+++ b/package.json
@@ -72,11 +72,12 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^3.7.4",
     "remark-cli": "^12.0.1",
-    "stylelint": "^16.26.1",
+    "stylelint": "^17.0.0",
     "typescript": "^5.9.3"
   },
   "peerDependencies": {
-    "jest": "^30.2.0"
+    "jest": "^30.2.0",
+    "stylelint": "^17.0.0"
   },
   "engines": {
     "node": ">=20.19.0"
