Change `jest` and `stylelint` peer dependencies to optional
This change adds the `peerDependenciesMeta` field in `package.json` to mark
the `jest` and `stylelint` peer dependencies as optional. This allows users
to install `jest-preset-stylelint` without auto-install of these peer dependencies.

Typically, users should explicitly install `jest` and `stylelint` when using the preset package like this, as the README already suggests:

```shell
npm install --save-dev jest stylelint jest-preset-stylelint
```

For the field, ref:
https://docs.npmjs.com/cli/v11/configuring-npm/package-json#peerdependenciesmeta

--- a/package.json
+++ b/package.json
@@ -79,6 +79,14 @@
     "jest": "^30.2.0",
     "stylelint": "^17.0.0"
   },
+  "peerDependenciesMeta": {
+    "jest": {
+      "optional": true
+    },
+    "stylelint": {
+      "optional": true
+    }
+  },
   "engines": {
     "node": ">=20.19.0"
   }
